Fix letter spacing for mobile

--- a/v2/style.css
+++ b/v2/style.css
@@ -143,7 +143,7 @@ body {
 
 section {
     text-align: center;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 .section-title {
@@ -152,27 +152,27 @@ section {
 }
 
 .about-section {
-    padding: 50px;
+    padding: 50px 20px;
     position: relative;
 }
 
 .about-section p{
-    margin: 20px auto;
+    margin: 10px auto;
     max-width: 600px;
-    padding: 10px 30px;
+    padding: 10px 10px;
     color: var(--grey-color)
 }
 
 .about-section .box-1 {
     background-color:#1f28336c;
-    padding: 20px;
+    padding: 10px;
     z-index: -1;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8);
 }
 
 .text-divider {
     margin: 0 auto;
-    width: 300px;
+    max-width: 300px;
     height: 1px;
     background-color: var(--dark-blue);
     z-index: 2;
